Further refactoring to naming of template elements. Plugin builder works now and so does default make target.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # ignore swap files
 *swp
-templateclass/*swp
+plugin_template/*swp
 # ignore compiled python files
 *pyc
-templateclass/*pyc
+plugin_template/*pyc
 .idea
