Add missing tag file to pb_tool.cfg

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -29,7 +29,7 @@ compiled_ui_files:
 resource_files: resources.qrc
 
 # Other files required for the plugin
-extras: icon.png plugin_builder.png metadata.txt
+extras: icon.png plugin_builder.png metadata.txt taglist.txt
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
