Set deployment directory in Makefile based on user OS (pb_tool is still preferred over make)

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -17,7 +17,7 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py plugin_builder.py plugin_builder_dialog.py  plugin_specification.py resources.py result_dialog.py  select_tags_dialog.py
+python_files: __init__.py plugin_builder.py plugin_builder_dialog.py  plugin_specification.py resources.py result_dialog.py  select_tags_dialog.py qgis_dirs.py
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: plugin_builder_dialog_base.ui results_dialog_base.ui select_tags_dialog_base.ui
