--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -41,6 +41,6 @@ locales:
 
 [help]
 # the built help directory that should be deployed with the plugin
-dir: help/build/html
+dir: docs
 # the name of the directory to target in the deployed plugin
 target: help
